# lumiere

./: README.md  meson.build
data/: app.gresource.xml  com.fyralabs.Lumiere.desktop.in  com.fyralabs.Lumiere.gschema.xml  meson.build  style.css
src/: Application.vala  Consts.vala  Utils.vala  Window.vala  meson.build
src/DBus/: MprisPlayer.vala  MprisRoot.vala
src/Objects/: MediaItem.vala
src/Services/: DirectoryMonitoring.vala  LibraryManager.vala  PlaybackManager.vala  Thumbnailer.vala
src/Widgets/: HeaderBar.vala  UnsupportedFileDialog.vala  WelcomePage.vala
src/Widgets/Player/: BottomBar.vala  PlayerPage.vala  PlaylistItem.vala  PlaylistPopover.vala  PreviewPopover.vala  SettingsPopover.vala
